--- a/evaluacion.tex
+++ b/evaluacion.tex
@@ -33,6 +33,7 @@ En este capítulo, realizamos una evaluación experimental de estas técnicas co
 % \section{Algoritmos de Identificacion de metodos builders}
 
 \section{Evaluación Experimental en identificación de métodos builders}
+\label{sec:buildersExp}
 En esta sección, evaluamos experimentalmente nuestros enfoques presentados en el capítulo \ref{cap:builders}. Describiremos como es la eficiencia y efectividad de cada algoritmo con las funciones de valoración presentada en la sección \ref{sec:fitness}. Además, mostraremos el uso de estos métodos identificados por nuestras técnicas durante el uso de una herramienta de verificación de software.
 
 La evaluación se basa en un conjunto de implementaciones de estructuras de datos que se utilizan como referencia, incluyendo: \verb"NCL" de Apache Collections \cite{apache}; \verb"BinaryTree", \verb"BinomialHeap", \verb"FibonacciHeap" tomados de \cite{Visser:2006}; \verb"UnionFind", una implementación de conjuntos disjuntos tomada de JGrapht \cite{jgrapht}. También evaluamos nuestra técnica en componentes de proyectos de software reales, como \verb"Lits" de la implementación de Sat4j \cite{sat4j}, tomada de \cite{Loncaric:2018}, que consiste en un almacén de variables que controla cuándo se realizó la última suposición sobre el valor de una variable y si hay oyentes observando el estado de esa variable; \verb"Scheduler", una implementación de un planificador de procesos tomada de \cite{sir}; y estructuras de datos conocidas del paquete \verb"java.util" \footnote{https://docs.oracle.com/javase/8/docs/api/java/util/package-summary.html} como: \verb"TreeMap", \verb"TreeSet", \verb"HashMap", \verb"HashSet" y \verb"LinkedList". 
@@ -255,18 +256,63 @@ Los resultados de la tabla \ref{tab:results-jpf1} y \ref{tab:results-jpf2} muest
 
 
 \section{BEAPI}
+En esta sección, evaluamos experimentalmente \textsf{BEAPI} en comparación con enfoques relacionados. La evaluación se organiza en torno a las siguientes preguntas de investigación:
 
+\begin{description}
+\item[RQ1] \emph{¿Se puede realizar una generación exhaustiva acotada de manera eficiente utilizando rutinas de la API?}
+\item[RQ2] \emph{¿Cuánto impactan las optimizaciones propuestas en el rendimiento de la generación exhaustiva acotada a través de la API?}
+\item[RQ3] \emph{¿Puede \textsf{BEAPI} ayudar a encontrar discrepancias entre las especificaciones \texttt{repOK} y la capacidad de generación de objetos de la API?}
+\end{description}
+
+Como estudios de caso, utilizamos implementaciones de estructuras de datos de cuatro bancos de pruebas: tres empleados en la evaluación de herramientas de prueba existentes (\textsf{Korat} \cite{Boyapati02}, \textsf{Kiasan} \cite{Deng06}, \textsf{FAJITA} \cite{Abad13}) y \textsf{ROOPS}. Estos bancos de pruebas cubren implementaciones diversas de estructuras de datos complejas, que son un buen objetivo para la generación exhaustiva acotada. Elegimos estos como estudios de caso porque las implementaciones vienen equipadas con \texttt{repOK}s escritos por los autores de los bancos de pruebas. Los experimentos se ejecutaron en una estación de trabajo con un procesador Intel Core i7-8700 (3.2 GHz) y 16 GB de RAM. Establecimos un tiempo de espera de 60 minutos para cada ejecución individual. Para replicar los experimentos, remitimos al lector al artefacto del artículo \cite{artifact}.
 \subsection{Eficiencia}
 
+En esta sección, evaluamos experimentalmente \textsf{BEAPI} en comparación con enfoques relacionados. La evaluación se organiza en torno a las siguientes preguntas de investigación:
+\begin{description}
+\item[RQ1] \emph{¿Puede realizarse BEG de manera eficiente utilizando rutinas de API?}
+\item[RQ2] \emph{¿Cuánto impactan las optimizaciones propuestas en el rendimiento de BEG a partir de la API?}
+\item[RQ3] \emph{¿Puede \textsf{BEAPI} ayudar a encontrar discrepancias entre las especificaciones \texttt{repOK} y la capacidad de generación de objetos de la API?}
+\end{description}
+
+Como casos de estudio, utilizamos implementaciones de estructuras de datos de cuatro bancos de pruebas: tres empleados en la evaluación de herramientas de prueba existentes (\textsf{Korat} \cite{Boyapati02}, \textsf{Kiasan} \cite{Deng06}, \textsf{FAJITA} \cite{Abad13}) y \textsf{ROOPS}. Estos bancos de pruebas cubren diversas implementaciones de estructuras de datos complejas, que son un buen objetivo para BEG. Elegimos estos casos de estudio porque las implementaciones vienen equipadas con \texttt{repOK}s escritos por los autores de los bancos de pruebas. Los experimentos se ejecutaron en una estación de trabajo con un procesador Intel Core i7-8700 (3.2 GHz) y 16 GB de RAM. Establecimos un tiempo límite de 60 minutos para cada ejecución individual. Para replicar los experimentos, remitimos al lector al artefacto del artículo \cite{artifact}.
+
+\subsection{Eficiencia de la Generación Exhaustiva Acotada a partir de APIs}\label{sec:evaluation-vs-korat}
 \input{tables/tableEficienciaBEAPI}
 
-\subsection{Impacto de las Optimizaciones realizas en BEAPI}
+Para la RQ1, evaluamos si \emph{BEAPI} es lo suficientemente rápido como para ser un enfoque de BEG útil, comparándolo con el enfoque de BEG popularemente utilizado en el estado del arte, \textsf{Korat} \cite{Siddiqui09}. Los resultados de la comparación se resumen en la Tabla~\ref{table:korat-beapi}. Para cada técnica, informamos los tiempos de generación (en segundos), el número de estructuras generadas y exploradas, para distintos tipos de scopes. 
+Aquí mostramos una muestra representativa de los resultados (tratamos de mantener la misma proporción de casos buenos y malos para cada técnica en los datos que informamos). 
+Incluimos hasta el scope exitoso más grande para cada técnica; los tiempos de ejecución para los alcances más grandes se muestran en negrita en la tabla. De esta manera, si surgen problemas de escalabilidad, se pueden identificar fácilmente. Para obtener resultados de rendimiento adecuados para \textsf{BEAPI}, probamos exhaustivamente los métodos de la API de las clases para asegurarnos de que fueran correctos para este experimento. No intentamos cambiar los \texttt{repOK}s de ninguna manera, porque eso cambiaría el rendimiento de \textsf{Korat}, y uno de nuestros objetivos aquí es evaluar el rendimiento de \textsf{Korat} utilizando \texttt{repOK}s escritos por diferentes programadores. Se esperan diferencias en las estructuras exploradas, ya que los espacios de búsqueda correspondientes para \textsf{Korat} y \textsf{BEAPI} son diferentes. Sin embargo, para el mismo caso de estudio y alcance, se espera que ambos enfoques generen la misma cantidad de estructuras válidas. Esto es cierto en la mayoría de los experimentos, con excepciones notables de dos tipos diferentes. En primer lugar, hay casos en los que \texttt{repOK} tiene errores; estos casos están sombreados en las tablas. En segundo lugar, la noción ligeramente diferente de \emph{alcance} en cada técnica puede causar discrepancias. Esto solo ocurre para Árboles Rojo-Negro (\texttt{RBT}) y en los casos de Fibonacci (\texttt{FibHeap}), que se muestran en negrita. En estos casos, ciertas estructuras de tamaño $n$ solo se pueden generar a partir de estructuras más grandes, con inserciones seguidas de eliminaciones y luego inserciones nuevamente para activar reordenamientos de equilibrio específicos. \textsf{BEAPI} descarta las secuencias generadas tan pronto como exceden el tamaño máximo de la estructura, por lo que no puede generar estas estructuras.
 
+En cuanto al rendimiento, tenemos resultados mixtos. En el banco de pruebas de \emph{Korat}, \emph{Korat} muestra un mejor rendimiento en 4 de 6 casos. En el banco de pruebas de \textsf{FAJITA}, \emph{BEAPI} es mejor en 3 de 4 casos. En el banco de pruebas de \textsf{ROOPS}, \emph{BEAPI} es mejor en 5 de 7 casos. En el banco de pruebas de \textsf{Kiasan}, \emph{Korat} es más rápido en 6 de los 7 casos. Observamos que \emph{BEAPI} muestra un mejor rendimiento en estructuras con restricciones más restrictivas, como \texttt{RBT} y Árboles de Búsqueda Binaria (\texttt{BST}); a menudo, estos casos tienen un número menor de estructuras válidas. Los casos en los que el número de estructuras válidas crece más rápido con respecto al alcance, como listas doblemente enlazadas (\texttt{DLList}), son más adecuados para \emph{Korat}. Más estructuras significa que \emph{BEAPI} tiene que crear más secuencias de prueba en cada iteración sucesiva, lo que hace que su rendimiento sufra más en tales casos. Como era de esperar, la forma en que se escriben los \texttt{repOK}s tiene un impacto significativo en el rendimiento de \emph{Korat}. Por ejemplo, para heaps binomiales (\texttt{BinHeap}), \emph{Korat} alcanza el alcance 8 con el \texttt{repOK} de \texttt{Roops}, el alcance 10 con el \texttt{repOK} de \texttt{FAJITA} y el alcance 11 con el \texttt{repOK} de \emph{Korat} (todos equivalentes en términos de estructuras generadas). En la mayoría de los casos, los \texttt{repOK}s del banco de pruebas de \emph{Korat} resultan en un mejor rendimiento, ya que están ajustados para su uso con \emph{Korat}. Los casos de estudio con errores en los \texttt{repOK}s están sombreados en la tabla y se discuten más en la Sección~\ref{sec:existing-specs-analysis}. Tenga en cuenta que los errores en los \texttt{repOK}s pueden afectar gravemente el rendimiento de \emph{Korat}.
+
+\subsection{Impacto de las Optimizaciones realizas en BEAPI}
+En la RQ2 evaluamos el impacto que cada una de las optimizaciones propuestas de \textsf{BEAPI} tiene en la generación exhaustiva acotada. Para esto, evaluamos el rendimiento de cuatro configuraciones diferentes de \emph{BEAPI}: \textsf{SM/BLD} es \emph{BEAPI} con coincidencia de estados (SM) y identificación de constructores (BLD) habilitados; \textsf{SM} es \emph{BEAPI} con solo coincidencia de estados (SM) habilitada; \textsf{BLD} es \emph{BEAPI} con solo identificación de constructores (BLD) habilitada; \textsf{NoOPT} tiene ambas optimizaciones deshabilitadas. En esta sección, solo mostraremos como afectan las optimizaciones de \emph{BEAPI} para el benchmark \texttt{Real World}; son cinco implementaciones "reales" de estructuras de datos: \texttt{LinkedList} (67 métodos de la API), \texttt{TreeSet} (34 métodos), \texttt{TreeMap} (61 métodos) y \texttt{HashMap} (45 métodos) de \texttt{java.util}, y \texttt{NCL} de Apache Collections (34 métodos).
+La Tabla~\ref{tab:results-realWorld} resume los resultados de este experimento.
+Vale aclarar, que hemos realizado el mismo experimento para el resto de los benchamarks utilizado en esta capitulo, pero por simplicidad para la lectura del lector, solo incluimos este benchmarks que es representativo para el analisis deseado.
+
+El enfoque de fuerza bruta (\textsf{NoOPT}) tiene un rendimiento deficiente incluso para los estudios de caso más fáciles y con scopes muy pequeños. Estos scopes son demasiado pequeños y a menudo insuficientes si se desea generar conjuntos de pruebas de alta calidad. La coincidencia de estados es la optimización más impactante, mejorando considerablemente por sí sola el rendimiento y la escalabilidad en general (comparar los resultados de \textsf{NoOPT} y \textsf{SM}). Como se esperaba, la identificación de constructores es mucho más relevante en los casos en que el número de métodos en la API es grande (más de 10), y especialmente en las estructuras de datos del mundo real (con 34 o más métodos de la API). En las estructuras de datos del mundo real, el uso de metodos builders precalculados permitió que \textsf{SM/BLD} se escalara a ámbitos significativamente más grandes en todos los casos, excepto en \texttt{TreeMap} y \texttt{TreeSet}, donde mejoró significativamente los tiempos de ejecución. En general, las optimizaciones propuestas tienen un impacto crucial en el rendimiento y la escalabilidad de \emph{BEAPI}, y ambas deben habilitarse para obtener buenos resultados.
+
+Aqui podemos concluir que es muy importante activar las optimizaciones que hemos desarollado, para que \emph{BEAPI} sea escalable a scopes mas altos.
+Sin estas optimizaciones, (solo con fuerza bruta) se observa la problemática que tienen las técnicas de generación exhaustiva para poder escalar dada la gran cantidad de combinaciones de métodos para poder generar secuencias.
+
+\emph{Sobre el costo de la identificación de métodos builders.} 
 
 \input{tables/optimizaciones}
 
-\subsection{Uso de BEAPI para analizar especificaciones}
+\subsubsection{Uso de Builders en BEAPI}
+Para las conclusiones de esta sección, es suficiente decir que se empleó el ámbito 5 para la identificación de métodos builders en todos los casos, y que el tiempo de ejecución máximo del enfoque fue de 132 segundos en las estructuras de datos del mundo real (\texttt{TreeMap}, 61 métodos). Verificamos manualmente que los métodos identificados incluyeran un conjunto suficiente de constructores en todos los casos. Ten en cuenta que BEG se realiza a menudo para ámbitos cada vez más grandes, y los métodos builders identificados se pueden reutilizar en diferentes ejecuciones. Por lo tanto, los tiempos de identificación de constructores se amortizan en diferentes ejecuciones, lo que dificulta calcular cuánto tiempo de identificación de constructores se agrega a los tiempos de ejecución de \textsf{BEAPI} en cada caso. Por lo tanto, no incluimos los tiempos de identificación de metodos builders en los tiempos de ejecución de \textsf{BEAPI} en ninguno de los experimentos. Observa que, para los scopes más grandes, que son los más importantes, el tiempo de identificación de constructores es insignificante en relación con los tiempos de generación.
+Estos resultados de identificación de métodos builders, se pueden observar con detalles en la sección \ref{sec:buildersExp}.
 
+
+
+\subsection{Uso de BEAPI para analizar especificaciones}
+\label{sec:existing-specs-analysis}
+\input{tables/bugRepOk}
+La RQ3 aborda si \textsf{BEAPI} puede ser útil para ayudar al usuario a encontrar fallas en \texttt{repOK}s, mediante la comparación del conjunto de objetos que se pueden generar utilizando la API y el conjunto de objetos generados a partir de utilizar un invariante, como es el caso del \texttt{repOK}. Diseñamos el siguiente procedimiento automatizado. Primero, ejecutamos \emph{BEAPI} para generar un conjunto, \texttt{SA}, de estructuras a partir de la API, y utilizamos \emph{Korat} para generar un conjunto, \texttt{SR}, a partir de \texttt{repOK}, utilizando el mismo ámbito para ambas herramientas. En segundo lugar, canonizamos las estructuras tanto en \texttt{SA} como en \texttt{SR} utilizando la linearización (Sección \ref{sec:stateMatching}). En tercer lugar, comparamos los conjuntos \texttt{SA} y \texttt{SR} en cuanto a igualdad. Las diferencias en esta comparación señalan una discrepancia entre \texttt{repOK} y la API. Existen tres posibles resultados para este procedimiento automatizado. Si \texttt{SA} $\subset$ \texttt{SR}, es posible que la API genere un subconjunto de las estructuras válidas, que \texttt{repOK} sufra de subespecificación (\texttt(under)) (restricciones faltantes), o ambos. En este caso, las estructuras en \texttt{SR} que no pertenecen a \texttt{SA} son evidencia del problema, y el usuario debe analizarlas manualmente para descubrir dónde está el error. Aquí, informamos los errores de subespecificación (confirmados manualmente) en \emph{repOK}s que son evidenciados por las estructuras mencionadas. En contraste, cuando \texttt{SR} $\subset$ \texttt{SA}, puede ser el caso de que la API genere un superconjunto de las estructuras válidas, que \texttt{repOK} sufra de sobreespecificación, \texttt(over), (\texttt{repOK} es demasiado restrictivo), o ambos. Las estructuras en \texttt{SA} que no pertenecen a \texttt{SR} podrían indicar la raíz del error, y nuevamente deben ser analizadas manualmente por el usuario. Informamos los errores de sobreespecificación (confirmados manualmente) en \texttt{repOK}s que son evidenciados por estas estructuras. Finalmente, puede darse el caso de que haya estructuras en \texttt{SR} que no pertenecen a \texttt{SA}, y que haya estructuras (distintas de las anteriores) en \texttt{SA} que no pertenecen a \texttt{SR}. Estos pueden ser debidos a fallos en la API, fallas en \texttt{repOK}, o ambos. Informamos las fallas confirmadas manualmente en \texttt{repOK}s que son evidenciadas por tales estructuras simplemente como errores (\texttt{repOK} describe un conjunto de estructuras diferente al que debería). Observa que las diferencias en las definiciones de ámbito de los enfoques pueden hacer que los conjuntos \texttt{SA} y \texttt{SR} difieran. Esto solo fue el caso en las estructuras \texttt{RBT} y \texttt{FibHeap}, donde \textsf{BEAPI} generó un conjunto más pequeño de estructuras para el mismo ámbito que \textsf{Korat} debido a restricciones de balance (como se explica en la Sección \ref{sec:evaluation-vs-korat}). Sin embargo, estos "falsos positivos" se pueden revelar fácilmente, ya que todas las estructuras generadas por \textsf{Korat} siempre estuvieron incluidas en las estructuras generadas por \textsf{BEAPI} si se utilizaba un ámbito más amplio para este último enfoque. Utilizando esta información, descartamos manualmente los "falsos positivos" debido a las diferencias de ámbito en \texttt{RBT} y \texttt{FibHeap}.
+
+Los resultados de este experimento se resumen en la Tabla \ref{table:bugs}. Encontramos fallas en 9 de 26 \texttt{repOK}s utilizando el enfoque descrito anteriormente. El alto número de fallas descubiertas evidencia que los problemas en \texttt{repOK}s son difíciles de encontrar manualmente, y que \textsf{BEAPI} puede ser de gran ayuda para esta tarea.
+
+\cacho{Agregar mas conclusiones}
 \subsection{Comparativa de BEAPI con otras tecnicas de generacion de test}
 
 \input{tables/randoopvsBeapi}
@@ -274,9 +320,6 @@ Los resultados de la tabla \ref{tab:results-jpf1} y \ref{tab:results-jpf2} muest
 
 
 
-
-
-\subsection{Uso de Builders en BEAPI}
 % En la segunda parte de la evaluación, analizamos qué tan útiles son los builders identificados en el contexto de un análisis de programas, específicamente en la generación automatizada de casos de prueba. Estos objetos pueden utilizarse, por ejemplo, como entradas en test parametrizados. Para los estudios de caso que proporcionan mecanismos para medir el tamaño de los objetos y compararlos por igualdad (es decir, los métodos size y equals de las estructuras de datos), generamos pruebas con Randoop utilizando todos los métodos disponibles en la API (API), y luego generamos pruebas con Randoop utilizando solo los métodos builders (BLD) identificados por nuestro enfoque en el experimento anterior (Tabla \ref{tab:results-compute-bld}). Luego comparamos el número de objetos diferentes (No. de Objs.) y el tamaño del objeto más grande (Max Obj. Size) generados por las pruebas generadas a partir de la API, en comparación con las pruebas generadas utilizando solo los métodos de BLD. Establecimos tres budget diferentes para la generación de pruebas: 60, 120 y 180 segundos (Budget). Los resultados se resumen en la Tabla \ref{tab:results-obj}. Los resultados muestran que, en el mismo presupuesto de pruebas, BLD genera en promedio un 500 porciento más de objetos que la API. En todos los casos, BLD también genera objetos significativamente más grandes que la API. A la luz de estos resultados, queda claro que la identificación automatizada de builders es beneficiosa para la generación automatizada de estructuras para clases con estado.
 
 % Además, comparamos las suites de pruebas generadas con Randoop midiendo la cobertura de ramas y líneas de código. Al igual que en el experimento anterior, la suite de pruebas utilizada para la comparación se generó a partir de los métodos builders (BLD) en comparación con el uso de todos los métodos disponibles de la API con un Randoop predeterminado. Establecimos cinco presupuestos diferentes para la generación de pruebas: 60, 120, 180, 300 y 600 segundos (Budget). Los resultados se resumen en la Tabla \ref{tab:results-coverage}.
